[package]
name = "wfdb"
version = "0.1.1"
description = "A library for decoding and encoding Waveform Database format files."
repository = "https://github.com/utakotoba/wfdb-rs"
documentation = "https://docs.rs/wfdb"
keywords = ["wfdb"]
license = "MIT"
edition = "2024"

[dependencies]
thiserror = "2.0.17"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
